<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_activity_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emeint.android.sdk.views.activities.CalculatorActivity">

    <TextView
        android:id="@+id/txtInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/palette_white"
        android:gravity="center"
        android:hint="@string/aed_0_00"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_40"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/palette_white"
        android:paddingTop="@dimen/padding_20"
        android:paddingBottom="@dimen/padding_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInput">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnSeven"
                style="@style/button_style"
                android:onClick="onDigit"
                android:text="@string/_7"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnEight"
                style="@style/button_style"
                android:onClick="onDigit"
                android:text="@string/_8"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnNine"
                style="@style/button_style"
                android:onClick="onDigit"
                android:text="@string/_9"
                tools:ignore="UsingOnClickInXml" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnFour"
                style="@style/button_style"
                android:onClick="onDigit"
                android:text="@string/_4"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnFive"
                style="@style/button_style"
                android:onClick="onDigit"
                android:text="@string/_5"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnSix"
                style="@style/button_style"
                android:onClick="onDigit"
                android:text="@string/_6"
                tools:ignore="UsingOnClickInXml" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnOne"
                style="@style/button_style"
                android:onClick="onDigit"
                android:text="@string/_1"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnTwo"
                style="@style/button_style"
                android:onClick="onDigit"
                android:text="@string/_2"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnThree"
                style="@style/button_style"
                android:onClick="onDigit"
                android:text="@string/_3"
                tools:ignore="UsingOnClickInXml" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnDecimal"
                style="@style/button_style"
                android:text="@string/decimal_point" />

            <Button
                android:id="@+id/btnZero"
                style="@style/button_style"
                android:onClick="onDigit"
                android:text="@string/_0"
                tools:ignore="UsingOnClickInXml" />

            <ImageButton
                android:id="@+id/btnClear"
                style="@style/button_style"
                android:contentDescription="@string/clear"
                android:src="@drawable/baseline_backspace_24" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
